# ee-cli

./: .env  .gitignore  .golangci.yml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  go.mod  go.sum  install.sh  llms.txt  test-install-cleanup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
cmd/ee/: main.go
cmd/menv/: main.go
internal/api/: client.go  config_sheets.go  conversions.go  converters.go  models.go  projects.go  schemas.go
internal/command/: apply.go  auth.go  context.go  create.go  edit.go  editor.go  env.go  export.go  hydrate.go  init.go  list.go  lists.go  menv_file.go  new.go  project.go  pull.go  push.go  remote.go  root.go  schema.go  set.go  sheet.go  skill.go  skill_test.go  ui.go  verify.go
internal/config/: config.go
internal/entities/: base_storage.go  configsheet.go  manager.go  project.go  schema.go  types.go  validator.go
internal/logger/: logger.go  logger_test.go
internal/manager/: manager.go  validator.go
internal/origin/: cloudflare.go  github.go  origin.go  toolcheck.go  toolcheck_test.go
internal/output/: printer.go
internal/parser/: dotenv.go  project.go  schema.go  sheet.go
internal/schema/: types.go  types_test.go
internal/storage/: entity.go  (+8 more)
tests/: README.md  conftest.py  pyproject.toml  test_merge.py  test_project.py  test_schema.py  test_sheet.py  test_skill.py
tests/fixtures/: config-base.env  config-dev.yaml  config-prod.json  schema-annotated.env  schema-api.json  schema-web-service.yaml
(+15 files in other folders)
